# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hcodec_public_cfg") {
  include_dirs = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec/include",
    "//foundation/multimedia/av_codec/services/engine/base/include/",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native/",
    "//foundation/multimedia/av_codec/services/utils/include/",
  ]
}

config("hcodec_cfg") {
  cflags_cc = [
    "-fexceptions",
  ]
}

ohos_shared_library("hcodec") {
  install_enable = true
  subsystem_name = "multimedia"
  part_name = "av_codec"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "hcodec_api.cpp",
    "hcodec_list.cpp",
    "hcodec_state.cpp",
    "hcodec.cpp",
    "hdecoder.cpp",
    "hencoder.cpp",
    "msg_handle_loop.cpp",
    "param_bundle.cpp",
    "state_machine.cpp",
    "type_converter.cpp",
  ]

  public_configs = [ ":hcodec_public_cfg" ]
  configs = [ ":hcodec_cfg" ]

  include_dirs = [
    "//third_party/openmax/api/1.1.2",
    "//drivers/peripheral/codec/interfaces/include/",
    "//drivers/hdf_core/interfaces/inner_api",
    "//drivers/hdf_core/interfaces/inner_api/osal/uhdf",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export/",
    "//foundation/multimedia/av_codec/interfaces/kits/c/",
  ]

  public_deps = [
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/utils/sync_fence:sync_fence",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//commonlibrary/c_utils/base:utils",
    "//foundation/multimedia/av_codec/services/utils:av_codec_format",
    "//foundation/multimedia/av_codec/services/utils:av_codec_service_utils",
    "//foundation/multimedia/av_codec/services/engine/base:av_codec_codec_base",
  ]

  external_deps = [
    "hdf_core:libhdi",
    "hiviewdfx_hilog_native:libhilog",
    "drivers_interface_codec:codec_idl_headers",
    "drivers_interface_codec:libcodec_proxy_1.0",
  ]
}