# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_shared_library("av_codec_engine_demuxer") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  deps = []
  include_dirs = []
  sources = []
  
  if (multimedia_av_codec_support_ffmpeg_demuxer) {
    include_dirs += [
      "ffmpeg_demuxer",
    ]
    sources += [
      "ffmpeg_demuxer/ffmpeg_demuxer_plugin.cpp",
    ]
  }
}
