# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_shared_library("napitest") {
  sources = [
    "$av_codec_root_dir/test/nativedemo/video_demo/videodec_ffmpeg_demo.cpp",
    "napitest.cpp",
    "napitest_middle.cpp",
    "tool_utility.cpp",
  ]
  include_dirs = [
    "./",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/engine/base/include",
    "$av_codec_root_dir/services/engine/codec/include/video",
    "$av_codec_root_dir/services/engine/common/include",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/test/nativedemo/video_demo",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
    "//foundation/graphic/graphic_2d/interfaces/inner_api",
    "//third_party/node/src",
    "//third_party/ffmpeg",
  ]
  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/arkui/napi:ace_napi",
  ]

  remove_configs = [ "//build/config/compiler:no_rtti" ]

  cflags = []
  cflags_cc = [ "-frtti" ]
  ldflags = []

  public_deps = [
    "$av_codec_root_dir/services/engine/base:av_codec_codec_base",
    "$av_codec_root_dir/services/engine/codec/video:av_codec_video_ffmpeg_codec",
    "//third_party/ffmpeg:libohosffmpeg",
  ]

  external_deps = [ "graphic_standard:surface" ]

  # 指定库生成路径
  relative_install_dir = "module"

  # 子系统及其组件, 后面会引用
  part_name = "napitest_interface"
  subsystem_name = "napitest"
}
